[metadata]
name = cup
author = Guannan Ma
author_email = mythmgn@gmail.com
description = A common useful python library
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
home_page = https://github.com/baidu/CUP
url = https://github.com/baidu/CUP
license = Apache License V2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    pylib
    lib
    common
    cup
 
[options]
packages=find:                                                                                      
setup_requires =
    setuptools
install_requires =
    pexpect
    requests
    pymysql
    paramiko
 
#tests_require =
#    pytest
#    mock
 
# test_suite = pyamis.tests
include_package_data = True
zip_safe = False
 
[options.package_data]                                                                                 
# ini_config =                                                                                           
#     ./src/
# perfindex =
#    conf/*
#    data/*
 
[sdist]
dist_dir = output/dist
 
   
[wheel]
universal = 1

[bdist_wheel]
universal = 1
dist_dir = output/dist
